--- a/design/style.css
+++ b/design/style.css
@@ -244,6 +244,7 @@ h1 {
     .content .image {
         display: flex;
         justify-content: center;
+        margin:0;
     }
     .content .image img {
         position: absolute;
